# Privacy_LLM_Inference

./: .gitignore  README.md  pyproject.toml
baselines/: privacy_inference_methods.yaml
docs/: MT_BENCH_AAAI_EVALUATION.md  PAPER_EVALUATION_MAP.md  PAPER_THEORY_OUTLINE.md  STAGE_ARTIFACTS.md  amulet_right_mask_nonlinear_islands.md  cross_machine_security_scope.md  generation_decode_modes.md  linear_boundary_additive_padding.md  lora_training_protection.md  runtime_boundary.md  stage_6_5_llama_synthetic_block.md  stage_6_6_hf_single_block.md  stage_6_7_causal_lm_boundaries.md  stage_6_8_masked_causal_lm_skeleton.md  stage_6_9_hf_causal_lm_skeleton.md  stage_7_0_full_pipeline_cost_leakage.md  stage_7_1_paper_artifacts.md  stage_7_3_repo_hygiene.md  stage_8_2_modelscope_real_checkpoint.md  tee_boundary_design.md  tee_gpu_protocol.md  tee_protocol_experiment_summary.md
outputs/: adaptive_island_attacks.csv  adaptive_island_attacks.json  adaptive_island_attacks.md  architecture_coverage.csv  architecture_coverage.json  architecture_coverage.md  attention_experiments.csv  attention_experiments.json  attention_experiments.md  attention_privacy_modes.json  attention_privacy_modes.md  cpu_runtime_completion.csv  cpu_runtime_completion.json  cpu_runtime_completion.md  cross_architecture_compatible_island_smoke.json  cross_architecture_compatible_island_smoke.md  cross_architecture_summary.csv  cross_architecture_summary.json  cross_architecture_summary.md  cross_attention_experiments.csv  cross_attention_experiments.json  cross_attention_experiments.md  experiment_summary.csv  (+164 more)
(+875 files in other folders)
